fix: lcs top spacing

--- a/eds/blocks/large-content-stack/large-content-stack.css
+++ b/eds/blocks/large-content-stack/large-content-stack.css
@@ -3,6 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding: 0;
+  padding-block-start: var(--space-10);
   text-align: center;
   
   > div >  div {
